--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,182 @@
 @import "tailwindcss";
+@import "tw-animate-css";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@custom-variant dark (&:is(.dark *));
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --color-sidebar-ring: var(--sidebar-ring);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-link: var(--sidebar-link);
+  --color-sidebar-label: var(--sidebar-label);
+
+  --color-header-ring: var(--header-ring);
+  --color-header-border: var(--header-border);
+  --color-header-accent-foreground: var(--header-accent-foreground);
+  --color-header-accent: var(--header-accent);
+  --color-header-primary-foreground: var(--header-primary-foreground);
+  --color-header-primary: var(--header-primary);
+  --color-header-foreground: var(--header-foreground);
+  --color-header: var(--header);
+
+  --color-table-ring: var(--table-ring);
+  --color-table-border: var(--table-border);
+  --color-table-accent-foreground: var(--table-accent-foreground);
+  --color-table-accent: var(--table-accent);
+  --color-table-primary-foreground: var(--table-primary-foreground);
+  --color-table-primary: var(--table-primary);
+  --color-table-foreground: var(--table-foreground);
+  --color-table: var(--table);
+
+  --color-chart-5: var(--chart-5);
+  --color-chart-4: var(--chart-4);
+  --color-chart-3: var(--chart-3);
+  --color-chart-2: var(--chart-2);
+  --color-chart-1: var(--chart-1);
+  --color-ring: var(--ring);
+  --color-input: var(--input);
+  --color-border: var(--border);
+  --color-destructive: var(--destructive);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-accent: var(--accent);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-muted: var(--muted);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-secondary: var(--secondary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-primary: var(--primary);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-popover: var(--popover);
+  --color-card-foreground: var(--card-foreground);
+  --color-card: var(--card);
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+:root {
+  --radius: 0.625rem;
+  /* --background: oklch(1 0 0);*/
+  --foreground: oklch(0.147 0.004 49.25);
+  --background: oklch(97.13% 0.005 286.30);
+  --card: oklch(1 0 0);
+  --card-foreground: oklch(0.147 0.004 49.25);
+  --popover: oklch(1 0 0);
+  --popover-foreground: oklch(0.147 0.004 49.25);
+  --primary: oklch(0.216 0.006 56.043);
+  --primary-foreground: oklch(0.985 0.001 106.423);
+  --secondary: oklch(0.97 0.001 106.424);
+  --secondary-foreground: oklch(0.216 0.006 56.043);
+  --muted: oklch(0.97 0.001 106.424);
+  --muted-foreground: oklch(0.553 0.013 58.071);
+  --accent: oklch(0.97 0.001 106.424);
+  --accent-foreground: oklch(0.216 0.006 56.043);
+  --destructive: oklch(0.577 0.245 27.325);
+  --border: oklch(0.923 0.003 48.717);
+  --input: oklch(0.923 0.003 48.717);
+  --ring: oklch(0.709 0.01 56.259);
+  --chart-1: oklch(0.646 0.222 41.116);
+  --chart-2: oklch(0.6 0.118 184.704);
+  --chart-3: oklch(0.398 0.07 227.392);
+  --chart-4: oklch(0.828 0.189 84.429);
+  --chart-5: oklch(0.769 0.188 70.08);
+  --sidebar: oklch(0.985 0.001 106.423);
+  --sidebar-foreground: oklch(0.147 0.004 49.25);
+  --sidebar-primary: oklch(0.216 0.006 56.043);
+  --sidebar-primary-foreground: oklch(0.985 0.001 106.423);
+  /* --sidebar-accent: oklch(0.97 0.001 106.424);
+  --sidebar-accent-foreground: oklch(0.216 0.006 56.043); */
+  --sidebar-accent: oklch(93.98% 0.030 283.74);
+  --sidebar-accent-foreground: oklch(61.02% 0.213 277.13);
+  --sidebar-border: oklch(0.923 0.003 48.717);
+  --sidebar-ring: oklch(0.709 0.01 56.259);
+  --sidebar-link: oklch(61.02% 0.213 277.13);
+  --sidebar-label: oklch(61.02% 0.213 277.13);
+
+  --header: oklch(0.985 0.001 106.423);
+  --header-accent: oklch(93.98% 0.030 283.74);
+  --header-foreground: oklch(0.147 0.004 49.25);
+  --header-border: oklch(0.923 0.003 48.717);
+  --header-ring: oklch(0.709 0.01 56.259);
+
+  --table: oklch(0.985 0.001 106.423);
+  --table-accent: oklch(93.98% 0.030 283.74);
+  --table-foreground: oklch(0.147 0.004 49.25);
+  --table-border: oklch(0.923 0.003 48.717);
+  --table-ring: oklch(0.709 0.01 56.259);
+
+  --placeholder-opacity: 0.5;
+  --placeholder-color: var(--muted-foreground);
+}
+
+.dark {
+  --background: oklch(0.147 0.004 49.25);
+  --foreground: oklch(0.985 0.001 106.423);
+  --card: oklch(0.216 0.006 56.043);
+  --card-foreground: oklch(0.985 0.001 106.423);
+  --popover: oklch(0.216 0.006 56.043);
+  --popover-foreground: oklch(0.985 0.001 106.423);
+  --primary: oklch(0.923 0.003 48.717);
+  --primary-foreground: oklch(0.216 0.006 56.043);
+  --secondary: oklch(0.268 0.007 34.298);
+  --secondary-foreground: oklch(0.985 0.001 106.423);
+  --muted: oklch(0.268 0.007 34.298);
+  --muted-foreground: oklch(0.709 0.01 56.259);
+  --accent: oklch(0.268 0.007 34.298);
+  --accent-foreground: oklch(0.985 0.001 106.423);
+  --destructive: oklch(0.704 0.191 22.216);
+  --border: oklch(1 0 0 / 10%);
+  --input: oklch(1 0 0 / 15%);
+  --ring: oklch(0.553 0.013 58.071);
+  --chart-1: oklch(0.488 0.243 264.376);
+  --chart-2: oklch(0.696 0.17 162.48);
+  --chart-3: oklch(0.769 0.188 70.08);
+  --chart-4: oklch(0.627 0.265 303.9);
+  --chart-5: oklch(0.645 0.246 16.439);
+
+  --sidebar: oklch(24.86% 0.041 271.04);
+  --sidebar-foreground: oklch(0.985 0.001 106.423);
+  --sidebar-primary: oklch(0.488 0.243 264.376);
+  --sidebar-primary-foreground: oklch(0.985 0.001 106.423);
+  --sidebar-accent: oklch(61.02% 0.213 277.13);
+  --sidebar-accent-foreground: oklch(0.985 0.001 106.423);
+  --sidebar-border: oklch(1 0 0 / 10%);
+  --sidebar-ring: oklch(0.553 0.013 58.071);
+  --sidebar-link: oklch(61.02% 0.213 277.13);
+  --sidebar-label: oklch(61.02% 0.213 277.13);
+
+  --header: oklch(24.86% 0.041 271.04);
+  --header-accent: oklch(0.268 0.007 34.298);
+  --header-foreground: oklch(0.985 0.001 106.423);
+  --header-primary: oklch(0.488 0.243 264.376);
+  --header-primary-foreground: oklch(0.985 0.001 106.423);
+  --header-accent: oklch(0.268 0.007 34.298);
+  --header-accent-foreground: oklch(0.985 0.001 106.423);
+
+  --table: oklch(24.86% 0.041 271.04);
+  --table-accent: oklch(0.268 0.007 34.298);
+  --table-foreground: oklch(0.985 0.001 106.423);
+  --table-primary: oklch(0.488 0.243 264.376);
+  --table-primary-foreground: oklch(0.985 0.001 106.423);
+  --table-accent: oklch(0.268 0.007 34.298);
+  --table-accent-foreground: oklch(0.985 0.001 106.423);
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
   }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  body {
+    @apply bg-background text-foreground;
+  }
 }
